# diagram-generator

./: .gitignore  README.md  pyproject.toml
src/dfa_diagram/: main.py
